--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,10 +20,25 @@ dependencies:
   flutter:
     sdk: flutter
 
+  geoflutterfire:
+    git: git://github.com/DarshanGowda0/GeoFlutterFire.git
+
+  google_maps_flutter: ^0.5.11+1
+  #geoflutterfire: ^2.0.3+5
+  location: ^2.3.5
+  google_maps_webservice: ^0.0.16
+  http: ^0.12.0+2
+  uuid: ^2.0.4
+  geolocator: ^5.1.5
+  flutter_google_places: ^0.2.3
+  flutter_spinkit: ^4.1.0
+  get_it: ^3.0.3
+  provider: ^3.2.0
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   firebase_auth: ^0.15.2
-  cloud_firestore: ^0.13.0+1
+  cloud_firestore: ^0.12.5
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
@@ -43,7 +58,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/marker.png
+    - assets/taxi.png
+    - assets/marker_car.png
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
